bug: font size and spacing for buttons with big screen media queries should check at home on mobile before deployment

--- a/client/style/components/top.scss
+++ b/client/style/components/top.scss
@@ -78,7 +78,7 @@
 
   button {
     @include button;
-    padding-top: 4vh;
+    padding-top: 3vh;
     padding-bottom: 5px;
     width: 100%;
 
@@ -103,26 +103,6 @@
   }
 
 }
-
-@media #{$mq-large} {
-  .top {
-    .social {
-      margin-right: 10vh;
-      margin-top: 6vh;
-    }
-    button {
-      padding-top: 15vh;
-    }
-  }
-}
-
-@media (max-width: 600px) {
-    .top {
-      aside {
-        bottom: 12vh;
-      }
-    }
-  }
 
 // mobile
   @media screen and (max-device-width: 640px) {
@@ -154,7 +134,6 @@
       }
     }
   }
-
 // landscape
 @media screen and (max-device-width: 680px) and (orientation: landscape) {
   .top {
@@ -181,6 +160,18 @@
   .top {
     .logo-top {
       top: 5vh;
+    }
+  }
+}
+
+@media #{$mq-large} {
+  .top {
+    .social {
+      margin-right: 10vh;
+      margin-top: 6vh;
+    }
+    button {
+      padding-top: 15vh;
     }
   }
 }
