--- a/client/style/components/variables.scss
+++ b/client/style/components/variables.scss
@@ -25,11 +25,11 @@ $danger: rgb(193, 30, 30);
 }
 
 // Breakpoints for screens
-$bp-small: 48em; // 768px
-$bp-medium: 64em; // 1024px
-$bp-large: 85.375em; // 1366px
-$bp-xlarge: 120em; // 1920px
-$bp-xxlarge: 160em; // 2560px
+$bp-small: 768px;
+$bp-medium: 1024px;
+$bp-large: 1366px;
+$bp-xlarge: 1920px;
+$bp-xxlarge: 2560px;
 
 // Media Queries
 $mq-small: "(min-width: #{$bp-small})";
